2006-06-19  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-ignore.m4 (gl_IGNORE_UNUSED_LIBRARIES): Prefer binutils's
	--as-needed option if available.  Problem reported by Albert Chin in
	<http://lists.gnu.org/archive/html/bug-gnulib/2006-06/msg00114.html>.

2006-06-18  Jim Meyering  <jim@meyering.net>

	Test for a bug that causes glibc's getcwd to suffer a failed assertion.
	* getcwd-abort-bug.m4 (gl_FUNC_GETCWD_ABORT_BUG): New file and macro.
	* getcwd.m4 (gl_FUNC_GETCWD): If we detect support for getcwd_null,
	also check for glibc-2.4's abort-inducing bug.

	* getcwd-path-max.m4 (gl_FUNC_GETCWD_PATH_MAX): Fix typo.
	Low-probability clean-up should be to use rmdir to get rid of
	the just-created directory, not unlink.

	* ftruncate.m4 (gl_FUNC_FTRUNCATE): If ftruncate is missing, make
	configure fail, and request a bug report to inform us about it.
	Add a comment that, barring reports to the contrary, in 2007 we'll
	assume ftruncate is universally available.

2006-06-10  Jim Meyering  <jim@meyering.net>

	Apply this change from gnulib:

	2006-05-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	            Bruno Haible  <bruno@clisp.org>

	* strndup.m4 (gl_FUNC_STRNDUP): Replace the AC_REPLACE_FUNCS with a
	check for the declaration of strnlen and a run test that exposes the
	AIX 5.1 strnlen bug.  In the failure case, #define strndup to
	rpl_strndup.

2006-05-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* c-strtod.m4 (gl_C99_STRTOLD): Use a link test rather than a
	compile test, for Tru64 4.0D.

2006-05-24  Jim Meyering  <jim@meyering.net>

	* jm-macros.m4: Require autoconf-2.59d, for its fixed version
	of AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK.

2006-05-19  Paul Eggert  <eggert@cs.ucla.edu>

	* nanosleep.m4 (gl_FUNC_NANOSLEEP): Rename cache variables to use
	gl_ rather than jm_.  Link, don't run, so that cross-compiles are
	allowed.  Check that resulting type is arithmetic.  Move AC_REQUIRE
	and AC_CHECK_HEADERS_ONCE outside of AC_CACHE_CHECK, since they're