@@ -3,6 +3,11 @@
 	* lib-ignore.m4 (gl_IGNORE_UNUSED_LIBRARIES): Prefer binutils's
 	--as-needed option if available.  Problem reported by Albert Chin in
 	<http://lists.gnu.org/archive/html/bug-gnulib/2006-06/msg00114.html>.
+	However, use -Wl,--as-needed, not bare --as-needed, since HP-UX 11.11
+	cc merely issues a bunch of annoying warnings for --as-needed
+	(this problem was reported by Bob Proulx).  Also, try linking with
+	-lm to detect a bug in binutils 2.16 (this problem was reported
+	by Ralf Wildenhues).
 
 2006-06-18  Jim Meyering  <jim@meyering.net>
 
